Visual bug overlaping sections  in mobile, resolved

--- a/src/app/components/sections/My_Page_Sections/Projects/Projects.css
+++ b/src/app/components/sections/My_Page_Sections/Projects/Projects.css
@@ -1,6 +1,5 @@
 .section_projects {
   width: 100%;
-  min-height: 130dvh;
 }
 
 .section_projects-content {
@@ -8,8 +7,8 @@
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: stretch;
   margin: 0 auto;
   padding: 5rem 1rem;
 }
@@ -34,7 +33,7 @@
 .section_projects-content_grid-single-bottom {
   display: flex;
   width: 100%;
-  height: 4dvh;
+  height: 40px;
   flex-direction: column;
   justify-content: flex-end;
   position: relative;
@@ -92,9 +91,6 @@
 }
 
 @media (max-width: 728px) {
-  .section_projects {
-    min-height: 200dvh;
-  }
   .section_projects-content_grid {
     grid-template-columns: 1fr;
   }
