--- a/src/app/components/sections/My_Page_Sections/Techs/Techs.css
+++ b/src/app/components/sections/My_Page_Sections/Techs/Techs.css
@@ -1,6 +1,5 @@
 .section_techs {
   width: 100%;
-  min-height: 90dvh;
 }
 
 .section_techs-content {
